[package]
name = "vulkan_ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
shaderc = "0.8.3"

[dependencies]
winit = "0.30.0" # Provide Vulkan context and window creation
ash = { version = "0.38.0", features = ["linked"] }  # Unsafe Vulkan bindings for Rust
glam = "0.27.0"  # Computer graphics math library
